syntax = "proto3";

package com.ecommerce.product_service;

option java_multiple_files = true;
option java_package = "com.ecommerce.product_service.grpc";
option java_outer_classname = "ProductProto";

service ProductService {
  rpc decreaseStock(DecreaseStockRequest) returns (DecreaseStockResponse);
  rpc increaseStock(IncreaseStockRequest) returns (IncreaseStockResponse);

}


message ProductItem {
  string product_id = 1;
  int32 quantity = 2;
}

message DecreaseStockRequest {
  repeated ProductItem items = 1; // Danh s치ch c치c product_id
}

message IncreaseStockRequest {
  repeated ProductItem items = 1; // Danh s치ch c치c ProductItem
}


message IncreaseStockResponse {
}

message DecreaseStockResponse {
  bool isAvailable = 1;
}